k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: family-tree-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.trlab.dev
      secretName: family-tree-tls
  rules:
    - host: api.trlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: family-tree-service
                port:
                  number: 80
